# prj-litellm-spend-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_PUBLICATION_GUIDE.md  README.md  SECURITY.md
backend/: Dockerfile  README.md  docker-compose-cicd.yml  docker-compose.yml  init.sql  pyproject.toml  requirements-dev.txt  requirements.txt  sql.sql
backend/app/: __init__.py  config.py  exceptions.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: budget.py  management.py  spend.py
backend/app/auth/: api_key_validator.py  models.py
backend/app/database/: connection.py
backend/app/models/: budget.py  litellm.py  spend.py
backend/app/repositories/: budget_repository.py  spend_repository.py
backend/app/services/: budget_service.py  spend_service.py
backend/app/utils/: currency_utils.py  date_utils.py
backend/sql/: management_spend_index.sql  summary_spend_index.sql
backend/tests/: conftest.py
backend/tests/test_api/: test_spend.py
backend/tests/test_repositories/: __init__.py  test_spend_repository.py
backend/tests/test_services/: test_spend_service.py
extension/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
extension/src/: constants.ts  extension.ts
extension/src/api/: client.ts
extension/src/auth/: apiKeyManager.ts
extension/src/cache/: memoryCache.ts
extension/src/config/: configuration.ts
extension/src/services/: budgetService.ts  projectAttribution.ts  refreshService.ts  spendService.ts
extension/src/state/: budgetState.ts  spendState.ts
(+13 files in other folders)
